# OTUS

./: .gitignore  CMakeLists.txt  files.html  globals.html  globals_func.html  index.html  print-ip_8hpp.html  print-ip_8hpp_source.html
.github/workflows/: doxygen.yml  release.yml
allocator/: CMakeLists.txt  List.hpp  allocator.hpp  binary-tree.hpp  container.hpp  list.hpp  main.cpp  pretty-function-info.hpp  reserve-allocator.hpp  simple-memory-manager.cpp  simple-memory-manager.hpp
editor/: CMakeLists.txt  Doxyfile  controller.hpp  document.hpp  factory.hpp  main.cpp  memento.hpp  observer.hpp  readme.md  shape.hpp  view.hpp
editor/shapes/: circle.hpp  rectangle.hpp  shape.hpp  utility.hpp
helloworld/: CMakeLists.txt  main.cpp  project_version.h  test_version.cpp
helloworld/test/: CMakeLists.txt  test.cpp
ip-filter/: CMakeLists.txt  ip-convert.hpp  ip-filter.cpp  ip.hpp  ip_filter.cpp
ip-filter/test/: CMakeLists.txt  test.cpp
matrix/: main.cpp
print-ip/: CMakeLists.txt  Doxyfile  additional_type_traits.hpp  print-ip.cpp  print-ip.hpp
search/: all_0.js  files_0.js  functions_0.js  pages_0.js
